# ToolsForUse

./: CMakeLists.txt  cudaResize.cu  cudaResize.h  cutter.cpp  functions.h  log_duration.h  main.cpp  picture_remover.cpp  resizer.cpp
